syntax = "proto3";

package jennah.v1;


option go_package = "github.com/alphauslabs/jennah/gen/proto;jennahv1";


// Main service definition for Jennah.
service DeploymentService {
  // Submit a job for deployment.
  rpc SubmitJob(SubmitJobRequest) returns (SubmitJobResponse);
  // List all jobs for the current tenant.
  rpc ListJobs(ListJobsRequest) returns (ListJobsResponse);
  // Get the current tenant's information.
  rpc GetCurrentTenant(GetCurrentTenantRequest) returns (GetCurrentTenantResponse);
}


// ResourceOverride allows callers to specify custom compute resource values.
// Any zero-value field is filled in from the resolved preset (or default).
message ResourceOverride {
  // cpu_millis is CPU in milli-cores (e.g. 1000 = 1 vCPU). 0 means use preset value.
  int64 cpu_millis = 1;
  // memory_mib is memory in mebibytes (e.g. 4096 = 4 GiB). 0 means use preset value.
  int64 memory_mib = 2;
  // max_run_duration_seconds is the job timeout in seconds. 0 means use preset value.
  int64 max_run_duration_seconds = 3;
}

message SubmitJobRequest {
  string image_uri = 2;
  map<string, string> env_vars = 3; // Example: { "DB_HOST": "10.0.0.1", "DEBUG": "true" }
  // resource_profile selects a named preset: "small", "medium", "large", "xlarge".
  // Defaults to "medium" when empty.
  string resource_profile = 4;
  // resource_override provides inline resource values that take precedence over the preset.
  // Partial overrides are supported â€” zero fields fall back to the resolved preset.
  ResourceOverride resource_override = 5;
}

message SubmitJobResponse {
  string job_id = 1;
  string status = 2; 
  string worker_assigned = 3;
}

message ListJobsRequest {
}

message ListJobsResponse {
  repeated Job jobs = 1;
}

message Job {
  string job_id = 1;
  string tenant_id = 2;
  string image_uri = 3;
  string status = 4;
  string created_at = 5;
}

message GetCurrentTenantRequest {
}

message GetCurrentTenantResponse {
  string tenant_id = 1;
  string user_email = 2;
  string oauth_provider = 3; // "google", "github"
  string created_at = 4;
}